k8s-argocd/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-prod
  labels:
    environment: prod
    app: weather-app
